# ROS2_final_project-Smart_home

./: .gitignore  README.md  USAGE_AND_TESTING.md
firmware/final_project_arduino/: final_project_arduino.ino
ros2_ws/control_motor/: motor_web.py
ros2_ws/control_motor/static/: maintenance_guard.js  motor_style.css
ros2_ws/control_motor/templates/: web_maintenance.html  web_motor.html  web_password.html
ros2_ws/smart_home_rfid/: package.xml  setup.cfg  setup.py
ros2_ws/smart_home_rfid/config/: whitelist.json
ros2_ws/smart_home_rfid/launch/: smart_home_launch.py
ros2_ws/smart_home_rfid/smart_home_rfid/: arduino_bridge.py  auth_node.py  web_server.py
ros2_ws/smart_home_rfid/smart_home_rfid/templates/: index.html
ros2_ws/smart_home_supervisor/: package.xml  setup.cfg  setup.py
ros2_ws/smart_home_supervisor/launch/: Launch.py
ros2_ws/smart_home_supervisor/resource/: smart_home_supervisor
ros2_ws/smart_home_supervisor/smart_home_supervisor/: supervisor_gui.py  supervisor_node.py
