<?xml version="1.0"?>
<package format="3">
  <name>smart_home_supervisor</name>
  <version>0.0.1</version>
  <description>Supervisor control package providing administrative commands for the smart home system.</description>
  <maintainer email="maintainer@example.com">Smart Home Team</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
